# ml-assert

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml
.github/: FUNDING.yml  changelog-config.json
.github/workflows/: ci.yml
SECURITY/: index.html
api/core/: index.html
api/data/: index.html
api/fairness/: index.html
api/integrations/: index.html
api/model/: index.html
api/plugins/: index.html
api/stats/: index.html
cross_validation/: index.html
data_assertions/: index.html
docs/: mkdocs.yml
docs/source/: cross_validation.md  data_assertions.md  fairness.md  index.md  integrations.md  model_assertions.md  plugins.md  statistical_assertions.md
docs/source/api/: core.md  fairness.md  integrations.md  model.md  plugins.md  stats.md
examples/: alerting_example.yaml  fairness_example.yaml  mlflow_integration.ipynb  ultimate_guide.ipynb
explainability/: index.html
fairness/: index.html
integrations/: index.html
model_assertions/: index.html
plugins/: index.html
search/: search_index.json
src/ml_assert/: __init__.py  cli.py
src/ml_assert/core/: base.py  dsl.py
src/ml_assert/data/: schema.py
src/ml_assert/plugins/: base.py
statistical_assertions/: index.html
tests/: test_assert_dataframe_schema.py  test_basic.py  test_cli.py  test_cli_run.py  test_core_base.py  test_core_dsl.py  test_cross_validation.py  test_dataframe_checks.py  test_dsl.py  test_fairness_explainability.py  test_fairness_metrics.py  test_integration.py  test_integration_combined.py  test_integrations.py  test_mlflow_integration.py  test_model_assertions.py  test_plugins.py  test_prometheus_integration.py  test_slack_integration.py  test_stats_distribution.py  test_stats_drift.py
