[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ml-assert"
version = "1.0.1"
description = "A comprehensive assertion-and-validation toolkit for ML workflows."
authors = [
    {name = "Shinde Aditya", email = "heyshinde@icloud.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ml", "machine-learning", "assertion", "testing", "validation", "data-quality", "mlops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "scipy>=1.15.3,<2.0.0",
    "typer[all]>=0.16.0,<0.17.0",
    "pyyaml>=6.0.2,<7.0.0",
    "scikit-learn>=1.7.0,<2.0.0",
    "dvc[all]>=3.0.0; extra == 'dvc'"
]

[project.urls]
Homepage = "https://github.com/HeyShinde/ml-assert"
Repository = "https://github.com/HeyShinde/ml-assert"
Documentation = "https://github.com/HeyShinde/ml-assert/blob/main/README.md"

[project.scripts]
ml_assert = "ml_assert.cli:app"

[project.entry-points."ml_assert.plugins"]
file_exists = "ml_assert.plugins.file_exists:FileExistsPlugin"
dvc_check = "ml_assert.plugins.dvc_check:DVCArtifactCheckPlugin"

[project.optional-dependencies]
dvc = ["dvc[all]>=3.0.0"]

[tool.poetry]
name = "ml-assert"
version = "1.0.1"
description = "A comprehensive assertion-and-validation toolkit for ML workflows."
authors = ["Shinde <data@shinde.io>"]
readme = "README.md"
packages = [
    { include = "ml_assert", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
jupytext = "^1.17.2"
ipykernel = ">=6.29.5,<7.0.0"
seaborn = ">=0.13.2,<0.14.0"
