[project]
name = "ml-assert"
version = "1.0.2"
description = "A comprehensive assertion-and-validation toolkit for ML workflows."
authors = [
    {name = "Shinde Aditya", email = "heyshinde@icloud.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
keywords = ["ml", "machine-learning", "testing", "validation", "assertion", "mlops"]

dependencies = [
    "pandas<3.0.0,>=2.3.0",
    "scikit-learn<2.0.0,>=1.7.0",
    "typer[all]<0.17.0,>=0.16.0",
    "pyyaml<7.0.0,>=6.0.2",
    "scipy<2.0.0,>=1.15.3",
]

[project.scripts]
ml-assert = "ml_assert.cli:app"

[project.entry-points."ml_assert.plugins"]
file_exists = "ml_assert.plugins.file_exists:FileExistsPlugin"
dvc_check = "ml_assert.plugins.dvc_check:DVCArtifactCheckPlugin"

[project.urls]
Homepage = "https://github.com/shinde-aditya/ml-assert"
Repository = "https://github.com/shinde-aditya/ml-assert"
"Bug Tracker" = "https://github.com/shinde-aditya/ml-assert/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["ml_assert"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
